Edited wiki page through web user interface.

--- a/wiki/UsefulLinks.wiki
+++ b/wiki/UsefulLinks.wiki
@@ -6,5 +6,23 @@ I found all these resources very helpful whilst working on the Playback Lib, spe
 
 Thanks to all the authors.
 
-Applet: B-Spline curves
+*I nice little Java Applet that lets you play with b-splines*
+
 http://www.cs.technion.ac.il/~cs234325/Applets/applets/bspline/GermanApplet.html
+
+
+*Paul Bourke's Page on the maths of b-splines*
+
+http://local.wasp.uwa.edu.au/~pbourke/surfaces_curves/spline/index2.html
+
+
+*Jim Oliver's Lecture Notes of b-splines*
+
+http://www.vrac.iastate.edu/~oliver/courses/me625.html
+
+
+*Notes of re-parameterising w.r.t. arc length (worked around this in the end, but may be desirable in the future)*
+
+http://www.algorithmist.net/arclengthparam.html
+
+http://www.cs.uiowa.edu/~kearney/pubs/CurvesAndSurfacesArcLength.pdf
